samples/_failures_safe/1761655244_3d7a0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5e18865.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_f5e18865.c:188:5: error: expected expression at end of input
  188 |     for (
      |     ^~~
./samples/SAFE/__tmp_f5e18865.c:188:5: error: expected declaration or statement at end of input
